--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -29,7 +29,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "for word in words:\n",
+    "    print(word.upper())"
    ]
   },
   {
@@ -45,7 +46,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "long_words = [word for word in words if len(word) >= 5]\n",
+    "print(long_words)"
    ]
   },
   {
@@ -61,7 +63,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "for word in words:\n",
+    "    if word.lower().startswith('t'):\n",
+    "        print(word)\n",
+    "        break"
    ]
   },
   {
@@ -84,7 +89,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "squares = [i**2 for i in range(1, 11)]\n",
+    "print(squares)"
    ]
   },
   {
@@ -100,7 +106,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "odd_squares = [i**2 for i in range(1, 11) if i % 2 != 0]\n",
+    "print(odd_squares)"
    ]
   },
   {
@@ -116,7 +123,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "multiples_of_8_squares = [i**2 for i in range(8, 1000, 8)]\n",
+    "print(multiples_of_8_squares)"
    ]
   },
   {
@@ -174,7 +182,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "total_people = len(people)\n",
+    "print(total_people)"
    ]
   },
   {
@@ -190,7 +199,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "people_with_kids = len([person for person in people if person[\"n_kids\"] > 0])\n",
+    "print(people_with_kids)"
    ]
   },
   {
@@ -206,7 +216,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "total_kids = sum(person[\"n_kids\"] for person in people)\n",
+    "print(total_kids)"
    ]
   },
   {
@@ -222,7 +233,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "people_in_a_year = []\n",
+    "for person in people:\n",
+    "    if person[\"name\"].endswith(\"a\"):\n",
+    "        person[\"n_kids\"] += 1\n",
+    "    people_in_a_year.append(person)\n",
+    "\n",
+    "print(people_in_a_year)"
    ]
   }
  ],
